# sdf-dx

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CODE_REVIEW_GUIDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: fe-format-lint.sh  lint-on-edit.sh
.claude/rules/: backend-code-architecture.md  contract-first.md  frontend-code-architecture.md  phase-iteration.md
.claude/skills/doc-sot-layering/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  contracts.yml
apps/api-python/: Dockerfile  Makefile  pyproject.toml
apps/api-python/src/sdf_api/: __init__.py  app.py  config.py
apps/api-python/src/sdf_api/contexts/: __init__.py
apps/api-python/src/sdf_api/contexts/monitoring/: __init__.py
apps/api-python/src/sdf_api/contexts/monitoring/adapters/: db.py  ws.py
apps/api-python/src/sdf_api/contexts/monitoring/application/: queries.py
apps/api-python/src/sdf_api/contexts/monitoring/domain/: __init__.py  line_state.py  oee.py  read_models.py
apps/api-python/src/sdf_api/contexts/monitoring/ports/: line_state.py  oee.py
apps/api-python/src/sdf_api/contexts/topology/: __init__.py
apps/api-python/src/sdf_api/contexts/topology/domain/: __init__.py  factory.py  line.py  machine.py
apps/api-python/src/sdf_api/shared_kernel/: __init__.py  ids.py  timestamp.py
apps/api-python/src/sdf_api/shared_kernel/ports/: __init__.py  clock.py
apps/api-python/tests/: conftest.py
apps/api-python/tests/architecture/: test_call_sites.py
apps/api-python/tests/contexts/monitoring/: fakes.py
apps/api-python/tests/contexts/monitoring/adapters/: test_ws.py
apps/api-python/tests/contexts/monitoring/application/: test_queries.py
apps/api-python/tests/contexts/monitoring/domain/: test_line_state.py  test_oee.py
apps/api-python/tests/contexts/topology/domain/: test_factory.py  test_line.py  test_machine.py
apps/api-python/tests/integration/: test_api_smoke.py  test_oee_sourcing.py
apps/api-python/tests/shared_kernel/: fakes.py  test_ids.py  test_timestamp.py
apps/dashboard-react/: .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/dashboard-react/src/: App.tsx  main.tsx
apps/dashboard-react/src/ui/: LineDashboard.tsx  LineStatePill.tsx  OeeGauge.tsx
apps/dashboard-react/tests/e2e/: UC-001-monitor-line-state.spec.ts  UC-002-observe-oee.spec.ts  _helpers.ts
apps/dashboard-react/tests/monitoring/: use-line-state.test.tsx
apps/ingest-python/: Dockerfile  pyproject.toml
apps/ingest-python/src/sdf_ingest/: __init__.py  main.py
apps/ingest-python/src/sdf_ingest/adapters/: consumer.py  line_state_writer.py  resolver.py  writer.py
apps/ingest-python/src/sdf_ingest/domain/: line_activity.py  record.py
apps/ingest-python/tests/: conftest.py
apps/ingest-python/tests/adapters/: test_consumer.py
apps/ingest-python/tests/architecture/: test_call_sites.py
apps/ingest-python/tests/domain/: test_line_activity.py  test_record.py
apps/ingest-python/tests/integration/: test_pipeline.py
apps/ot-gateway-kotlin/: .dockerignore  .editorconfig  .gitignore  Dockerfile  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
apps/ot-gateway-kotlin/bridge/: build.gradle.kts
apps/ot-gateway-kotlin/gateway/: build.gradle.kts
apps/ot-gateway-kotlin/simulator/: build.gradle.kts
docs/: DOMAIN-NOTES.md  KNOWN-UNKNOWNS.md  SOT-LAYERS.md
docs/ADR/: 0000-phase-iteration-chapter-0.md  0001-polyglot-python-kotlin.md  0002-timescaledb-over-influxdb.md  0003-schema-per-tenant.md  0004-functional-core-imperative-shell.md  0005-contract-first-llm-drift.md  0006-test-speed-tiering.md  0007-e2e-as-qa-coverage-gate.md  0008-domain-modeling-evolution.md  0009-inter-context-communication.md  0010-architectural-fitness-tooling.md  0011-sparkplug-namespace.md  0012-oee-iso22400.md  0016-error-as-value.md  0017-system-reads-injection.md  0018-pydantic-at-boundary-only.md  0019-orm-containment-in-adapters.md  0020-unit-of-work.md  0021-clockport-protocol-standardized.md  0022-ports-as-folder-file-per-feature.md  0023-importlinter-contract-set.md  0024-fakes-with-in-memory-dataset.md  0025-edge-protocol-sparkplug-then-opcua.md  0026-oee-iso22400-clause-correction.md  0027-generated-contracts-as-installable-package.md  0028-frontend-fc-is-and-generated-zod-boundary.md  0029-websocket-live-state-into-query-cache.md  0030-url-as-state-and-deferred-routing.md  0031-frontend-lint-enforcement-and-drift-guardrails.md  0032-lint-hardening-suppression-discipline.md  0033-identity-and-auth-model.md  0034-bounded-context-formalization.md  0035-multi-schema-persistence-and-tenant-data-isolation.md  0036-machinekind-automotive-five-shop-taxonomy.md  0037-cross-tenant-enterprise-oee-scope.md  0038-seeded-credential-role-mapping-and-cloudflare.md  template.md
docs/AI-WORKFLOW/: case-00-arch-doc-after-plan.md  case-01-reference-codebase-alignment.md  case-02-jpa-stance-retract.md
docs/apply/: jd.md  portfolio-onepager.draft.md
docs/architecture/: 2026-05-23-code-architecture.md  2026-05-24-frontend-architecture.md
docs/plans/: 2026-05-22-phase-1-single-factory-vertical-slice.md  2026-05-23-reference-codebase-alignment-plan.md  2026-05-24-phase-2-plan-a-backend-multitenancy.md
docs/plans/archive/: 2026-05-23-arch-doc-discussion-notes.md
docs/roadmap/: 2026-05-22-sdf-manufacturing-dx-portfolio-design.md  2026-05-23-public-live-demo-deployment-addendum.md  2026-05-24-phase-2-backend-multitenancy-scope.md
docs/spec/: ACTORS.md  GLOSSARY.md  README.md  USE-CASES.md
docs/spec/use-cases/: UC-001-monitor-line-state.md  UC-002-observe-oee.md  UC-004-onboard-tenant.md  UC-005-authenticate-and-rbac-scope.md  UC-006-query-enterprise-oee.md  _TEMPLATE.md
infra/timescale/init/: 002_schema.sql  003_hypertables.sql  004_continuous_aggregates.sql  005_seed.sql
scripts/: check-domain-no-suppress.py  check-use-case-coverage.py  init.sh  stats.sh
(+37 files in other folders)
