[project]
name = "sdf-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "asyncpg>=0.29",
  "aiokafka>=0.11",
  "structlog>=24.4",
  "httpx>=0.27",
  "websockets>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.112",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.1",
  "testcontainers[postgres,kafka]>=4.8",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdf_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle / pyflakes
  "I",                  # isort
  "B",                  # bugbear
  "C90",                # mccabe
  "S",                  # bandit
  "PLC", "PLE", "PLR",  # pylint subsets (incl. private-name access PLC2701)
  "RUF",
  "ASYNC",
]
ignore = ["S101"]  # asserts ok in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_any_decorated = true
warn_return_any = true
warn_unreachable = true
mypy_path = "src"
packages = ["sdf_api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: testcontainers-backed; opt-in via --integration",
]

[tool.importlinter]
root_package = "sdf_api"

[[tool.importlinter.contracts]]
name = "domain must not depend on adapters or external infra"
type = "forbidden"
source_modules = ["sdf_api.contexts.*.domain"]
forbidden_modules = [
  "sdf_api.contexts.*.adapters",
  "sqlalchemy", "asyncpg", "aiokafka", "httpx", "fastapi", "redis",
]

[[tool.importlinter.contracts]]
name = "BCs may not import each other directly (shared_kernel only)"
type = "independence"
modules = [
  "sdf_api.contexts.monitoring",
  "sdf_api.contexts.topology",
]
