[project]
name = "sdf-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "asyncpg>=0.29",
  "aiokafka>=0.11",
  "structlog>=24.4",
  "httpx>=0.27",
  "websockets>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.112",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.1",
  "testcontainers[postgres,kafka]>=4.8",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdf_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",        # pycodestyle / pyflakes
  "I",                  # isort
  "B",                  # bugbear
  "C90",                # mccabe
  "S",                  # bandit
  "PLC", "PLE", "PLR",  # pylint subsets (incl. private-name access PLC2701)
  "RUF",
  "ASYNC",
]
ignore = ["S101"]  # asserts ok in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_any_decorated = true
warn_return_any = true
warn_unreachable = true
mypy_path = "src"
packages = ["sdf_api"]

# asyncpg / aiokafka ship no py.typed marker; treat them as untyped third-party
# boundaries (used in adapters / composition only). This suppresses the
# missing-stub error without relaxing strictness on our own code.
[[tool.mypy.overrides]]
module = ["asyncpg.*", "aiokafka.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: testcontainers-backed; opt-in via --integration",
]

# Coverage is left out of `addopts` so the default test run stays fast and
# tool-neutral; `scripts/stats.sh` passes `--cov` explicitly. Measured over the
# unit run only — integration (testcontainers) tests are opt-in, so the adapter
# code they exercise reads as uncovered here. The functional core is the figure
# that matters.
[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

# Architectural enforcement — single source of truth is ADR-0023.
# Only the contracts whose source modules exist as of Section D (domain) are
# active here; adapters/use-case/composition contracts (ADR-0023 #4, #6, #7)
# land in Section E when those modules first appear. Do NOT relax a contract to
# make code pass — fix the code (rules §12).
[tool.importlinter]
root_package = "sdf_api"
# Required because the forbidden contracts below name external packages
# (pydantic, sqlalchemy, …) — import-linter must graph them to ban their import.
include_external_packages = true

# ADR-0023 #1 — domain-no-system-reads (call-site reads of random/uuid/clock are
# additionally caught by tests/architecture/test_call_sites.py, AST checks A1/A2).
[[tool.importlinter.contracts]]
name = "domain-no-system-reads"
type = "forbidden"
source_modules = ["sdf_api.contexts.*.domain", "sdf_api.shared_kernel"]
forbidden_modules = ["random", "secrets"]

# ADR-0023 #2 — domain-no-validation-libs (ADR-0004 + ADR-0018).
[[tool.importlinter.contracts]]
name = "domain-no-validation-libs"
type = "forbidden"
source_modules = ["sdf_api.contexts.*.domain", "sdf_api.shared_kernel"]
forbidden_modules = ["pydantic", "marshmallow", "attrs", "returns", "arrow"]

# ADR-0023 #3 — domain-no-infrastructure (ADR-0004).
[[tool.importlinter.contracts]]
name = "domain-no-infrastructure"
type = "forbidden"
source_modules = ["sdf_api.contexts.*.domain", "sdf_api.shared_kernel"]
forbidden_modules = [
  "sqlalchemy", "asyncpg", "aiokafka", "httpx", "fastapi", "redis", "pymemcache",
]

# ADR-0023 #5 — bc-independence (Phase 1: the only BC-level rule in force, ADR-0008).
[[tool.importlinter.contracts]]
name = "bc-independence"
type = "independence"
modules = [
  "sdf_api.contexts.monitoring",
  "sdf_api.contexts.topology",
]

# ADR-0023 #6 — adapters-no-upward (ADR-0019). Adapters satisfy Port Protocols
# structurally; the composition root acknowledges the match. Driving HTTP/WS
# routing therefore lives in composition (app.py), never in adapters/.
# (`sdf_api.use_cases` is omitted from both contracts until the first cross-BC
# use case lands — import-linter errors on a source/forbidden module that does
# not yet exist.)
[[tool.importlinter.contracts]]
name = "adapters-no-upward"
type = "forbidden"
source_modules = ["sdf_api.contexts.*.adapters"]
forbidden_modules = [
  "sdf_api.contexts.*.ports",
  "sdf_api.contexts.*.application",
]

# ADR-0023 #7 — composition-only-imports-adapters. Application/use-cases never
# import adapters; only the composition root wires them.
[[tool.importlinter.contracts]]
name = "composition-only-imports-adapters"
type = "forbidden"
source_modules = ["sdf_api.contexts.*.application"]
forbidden_modules = ["sdf_api.contexts.*.adapters"]
