[project]
name = "sdf-ingest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.11",
  "asyncpg>=0.29",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "structlog>=24.4",
  "protobuf>=5.29.3,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.112",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.1",
  "testcontainers[postgres,kafka]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdf_ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "S", "PLC", "PLE", "PLR", "RUF", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
warn_unreachable = true
mypy_path = "src"
packages = ["sdf_ingest"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: opt-in via --integration"]

[tool.importlinter]
root_package = "sdf_ingest"

[[tool.importlinter.contracts]]
name = "ingest.domain must not import infra"
type = "forbidden"
source_modules = ["sdf_ingest.domain"]
forbidden_modules = ["aiokafka", "asyncpg", "sdf_ingest.adapters"]
