[project]
name = "sdf-ingest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.11",
  "asyncpg>=0.29",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "structlog>=24.4",
  "protobuf>=5.29.3,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.112",
  "ruff>=0.6",
  "mypy>=1.11",
  "import-linter>=2.1",
  "testcontainers[postgres,kafka]>=4.8",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdf_ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# SLF — flake8-self: private-member access across a class boundary (SLF001).
# PGH — PGH004 blanket-noqa; RUF100 (unused-noqa) already active via RUF.
select = ["E", "F", "W", "I", "B", "C90", "S", "PLC", "PLE", "PLR", "SLF", "PGH", "RUF", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "SLF001"]  # test fakes legitimately poke internals

# Explicit complexity ceilings — keep the mccabe/pylint thresholds visible rather
# than relying on tool defaults. Deliberately generous: aligned with the Kotlin
# detekt CyclomaticComplexMethod threshold so clean FC/IS code is not flagged.
[tool.ruff.lint.mccabe]
max-complexity = 12  # align with Kotlin detekt CyclomaticComplexMethod threshold

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_any_decorated = true
warn_return_any = true
warn_unreachable = true
# Suppression discipline: a bare `# type: ignore` must carry a code, and a stale
# ignore (no longer suppressing anything) is an error — keeps drift-prone inline
# silencing honest, mirroring the ruff PGH004/RUF100 bans.
warn_unused_ignores = true
enable_error_code = ["ignore-without-code"]
mypy_path = "src"
packages = ["sdf_ingest"]

# asyncpg / aiokafka ship no py.typed marker; treat them as untyped third-party
# boundaries. This does NOT relax strictness on our own code — only suppresses
# the missing-stub error for these infra clients (used in adapters only).
[[tool.mypy.overrides]]
module = ["asyncpg.*", "aiokafka.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: opt-in via --integration"]

# Coverage is left out of `addopts` so the default test run stays fast and
# tool-neutral; `scripts/stats.sh` passes `--cov` explicitly. Measured over the
# unit run only — integration (testcontainers) tests are opt-in, so the adapter
# code they exercise reads as uncovered here.
[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.importlinter]
root_package = "sdf_ingest"
# Required because the forbidden contracts below name external packages
# (pydantic, aiokafka, …) — import-linter must graph them to ban their import.
include_external_packages = true

# The ingest functional core (`sdf_ingest.domain`) is held to the same purity as
# the api domain (ADR-0023 contracts 1–3): no infrastructure, no validation libs
# (incl. the generated pydantic DTOs in `sdf_contracts`), no randomness sources.
# Call-site clock/uuid reads are additionally caught by tests/architecture.
[[tool.importlinter.contracts]]
name = "ingest-domain-no-infrastructure"
type = "forbidden"
source_modules = ["sdf_ingest.domain"]
forbidden_modules = ["aiokafka", "asyncpg", "httpx", "sdf_ingest.adapters"]

[[tool.importlinter.contracts]]
name = "ingest-domain-no-validation-libs"
type = "forbidden"
source_modules = ["sdf_ingest.domain"]
forbidden_modules = ["pydantic", "marshmallow", "attrs", "returns", "arrow", "sdf_contracts"]

[[tool.importlinter.contracts]]
name = "ingest-domain-no-system-reads"
type = "forbidden"
source_modules = ["sdf_ingest.domain"]
forbidden_modules = ["random", "secrets"]
